# multi-party-eddsa

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: test.yml
examples/: common.rs  gg18_keygen_client.rs  sign_client.rs  sm_manager.rs
src/: lib.rs
src/protocols/: mod.rs
src/protocols/aggsig/: mod.rs  test.rs  test_pubkey_gen.py
src/protocols/multi_sig/: mod.rs  test.rs
src/protocols/multisig/: mod.rs  test.rs
src/protocols/musig2/: mod.rs  test.rs
src/protocols/thresholdsig/: mod.rs  test.rs
