[package]
name = "multi-party-eddsa"
version = "0.2.3"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
curv = { package = "curv-kzen", version = "0.9", default-features = false }
hex = "0.3.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8"
sha2 = "0.9"

[dev-dependencies]
ed25519-dalek = "1.0.1"
rand_xoshiro = "0.6.0"
itertools = "0.10"

[features]
default = ["curv/rust-gmp-kzen"]
