[package]
name = "multi-party-eddsa"
version = "0.2.3"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

edition="2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
curv = { package = "curv-kzen", version = "0.9", default-features = false, path="/Users/hrezaei/codes/rust/curv" }
hex = "0.3.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8"
sha2 = "0.9"
zeroize = "1"


[dependencies.zk-paillier]
path = "../zk-paillier"
package = "zk-paillier"
default-features = false

[dependencies.paillier]
#version = "0.4.2"
path = "../rust-paillier"
package = "kzen-paillier"
default-features = false


[dev-dependencies]
ed25519-dalek = "1.0.1"
rand_xoshiro = "0.6.0"
itertools = "0.10"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
reqwest = { version = "0.9", default-features = false }
aes-gcm = "0.9.4"
uuid = { version = "0.8", features = ["v4"] }
hmac = "0.11"


[features]
default = ["curv/rust-gmp-kzen"]

[[example]]
name = "sm_manager"

[[example]]
name = "eph_sign_client"